add x-marked components

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
-x-marked
-
-x-marked is Web Components module. render markdown to HTML.
-
-========
-
+<html>
+  <head>
+    <meta charset="utf-8">
+    <link rel="import" href="x-marked.html">
+  </head>
+  <body>
+    <x-marked data-apply-style="true">
+# x-marked
+  
 マークダウンで書かれたテキストをHTMLに変換するウェッブコンポーネンツッ
 
 * リストだって
@@ -27,3 +30,7 @@ x-marked is Web Components module. render markdown to HTML.
 
 * [marked.js](https://github.com/chjj/marked)
 * [github-markdown-css](https://github.com/sindresorhus/github-markdown-css)
+
+    </x-marked>
+  </body>
+</html>
