属性の値を削除

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <link rel="import" href="x-marked.html">
   </head>
   <body>
-    <x-marked data-apply-style="true">
+    <x-marked data-apply-style>
 # x-marked
   
 マークダウンで書かれたテキストをHTMLに変換するウェッブコンポーネンツッ
 
 * リストだって
-* このとおり
+* このとおり！
 
 `x-marked`タグを指定すれば使える超簡単！
 
@@ -24,7 +24,7 @@
 <x-marked>#markdownテキストをいれるとレンダリングされるよ</x-marked>
 ```
 
-タグに`data-apply-style="true"`をつけるとGitHub風なレンダリングになるよ。
+タグに`data-apply-style`をつけるとGitHub風なレンダリングになるよ。
 
 ## 使ったもの
 
